serial monitor improvements

--- a/serial.html
+++ b/serial.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="toolbar">
-      <span class="status">Connected !</span>
+      <span class="status">Connecting...</span>
       <select id="baudRate">
           <option value="300">300 bps</option>
           <option value="600">600 bps</option>
@@ -27,8 +27,7 @@
           <option value="115200">115200 bps</option>
         </select>
     </div>
-    <textarea readonly="readonly">Hello world !
-Ethernet initialized !</textarea>
+    <textarea readonly="readonly"></textarea>
 
     <div class="input-field">
       <input type="text" id="input-text" />
