--- a/serial.html
+++ b/serial.html
@@ -30,7 +30,7 @@
     <textarea readonly="readonly"></textarea>
 
     <div class="input-field">
-      <input type="text" id="input-text" />
+      <input type="text" id="input-text" placeholder="Text to send..." />
     </div>
     <!-- Scripts -->
     <script type="text/javascript" src="libs/jquery-2.0.3.js"></script>
